--- a/template_submissions_to_scientific_reports/bibliography.bib
+++ b/template_submissions_to_scientific_reports/bibliography.bib
@@ -504,7 +504,6 @@ author = "Matsui, Akihiko",
   year={2013},
   publisher={National Acad Sciences}
 }
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%DERIVATIVE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 @book{Abadir2005,
   title={Matrix algebra},
   author={Abadir, Karim M and Magnus, Jan R},
@@ -512,7 +511,6 @@ author = "Matsui, Akihiko",
   year={2005},
   publisher={Cambridge University Press}
 }
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 @article{Hilbe2018,
   title={Partners and rivals in direct reciprocity},
   author={Hilbe, Christian and Chatterjee, Krishnendu and Nowak, Martin A},
@@ -522,4 +520,10 @@ author = "Matsui, Akihiko",
   pages={469--477},
   year={2018},
   publisher={Nature Publishing Group}
+}
+@book{nowak2006evolutionary,
+  title={Evolutionary dynamics: exploring the equations of life},
+  author={Nowak, Martin A},
+  year={2006},
+  publisher={Harvard university press}
 }
